Remove DSP references in Qemu/Atlas
Remove DSP code in hw/mips
Add the folder "simu" in the search path. It can be used for DSP for
their code. The DSP code will be automatically compiled if they used the
right Makefile.objs in their code.
Add Atlas optional arguments:

    scn: scenario number
    tc: test case number
    standalone: do not open the Atlas dynamic library

Resolves: RDDEVATLAS-141
Change-Id: I2b3498bf3c2f3dde3c960b38853373f4ec6e54ca

--- a/Makefile.objs
+++ b/Makefile.objs
@@ -95,6 +95,7 @@ common-obj-y += qom/
 common-obj-y += disas/
 common-obj-y += atlas/
 atlas-obj-m += atlas/
+common-obj-y += simu/
 
 ######################################################################
 # Resource file for Windows executables
