--- a/Makefile.target
+++ b/Makefile.target
@@ -141,6 +141,7 @@ obj-y += dump.o
 obj-y += migration/ram.o migration/savevm.o
 #ATLAS++
 LIBS := $(libs_softmmu) $(LIBS) -ldl
+obj-y += simu/
 #ATLAS END
 
 # xen support
